--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.1",
+    "bootstrap": "^5.0.0-alpha1",
+    "popper.js": "^1.16.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.7.3",
+    "recoil": "^0.7.7",
+    "toasted-notes": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
